--- a/presentation.html
+++ b/presentation.html
@@ -27,7 +27,7 @@
   <section id="banner">
     <div class="row uniform 25%">
       <div class="-1u 3u">
-        <span class="image fit"><img src="images/jeff_lefoll.jpg" alt="" /></span>
+        <span class="image fit"><img src="images/small_jeff_lefoll.jpg" alt="" /></span>
       </div>
       <div class="7u">
         <h2>Bonjour, Je suis Jean-François Le Foll.</h2>
