nuage de compétences

--- a/presentation.html
+++ b/presentation.html
@@ -70,7 +70,7 @@
                 <div class="2u"><span><h2>TDD</h2></span></div>
                 <div class="1u$"><span><h4>C#</h4></span></div>
                 <div class="-3u 3u"><span><h3>JUnit</h3></span></div>
-                <div class="-4u 6u"><span><h3>Jenkins / Hudson</h3></span></div>
+                <div class="-4u 6u"><span><h3>Jenkins</h3></span></div>
                 <div class="-2u 6u"><span><h2>Clean Code</h2></span></div>
               </div>
             </div>
