--- a/index.html
+++ b/index.html
@@ -1,11 +1,124 @@
-<html>
+<!DOCTYPE HTML>
+<HTML>
 
   <head>
-    <title>jefflefoll.github.io</title>
+    <title>Jean-François Le Foll</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-layers.min.js"></script>
+    <script src="js/init.js"></script>
+    <noscript>
+      <link rel="stylesheet" href="css/skel.css" />
+      <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="css/style-xlarge.css" />
+    </noscript>
   </head>
 
-  <body>
-    En construction.
-  </body>
+  <body id="top">
 
-</html>
+    <header id="header" class="skel-layers-fixed">
+      <h1><a href="https://github.com/JeffLeFoll/">#Développeur #ScrumMaster</a></h1>
+      <nav id="nav">
+        <ul>
+          <li><a href="#banner">Introduction</a></li>
+          <li><a href="#depots">Dépôts de code</a></li>
+          <li><a href="#presentations">Présentations</a></li>
+          <li><a href="#competences">Compétences</a></li>
+        </ul>
+        </nav>
+    </header>
+
+  <section id="banner">
+    <div class="row uniform 25%">
+      <div class="-1u 3u">
+        <span class="image fit"><img src="images/small_jeff_lefoll.jpg" alt="" /></span>
+      </div>
+      <div class="7u">
+        <h2>Bonjour, Je suis Jean-François Le Foll.</h2>
+        <p>Passionné par mon métier le développement logiciel, convaincu par les méthodes agiles et les pratiques de développement actuelles issues d'XP (TDD, pair programming) ; J'essaye de mettre ces idées en application dans mon travail de tous les jours ainsi que de diffuser ces bonnes pratiques. </p>
+      </div>
+    </div>
+  </section>
+
+    <div id="main" class="container">
+
+        <div id="travail" class="row">
+          <section class="4u 8u$(medium)" id="depots">
+              <h2>Mes dépôts de code</h2>
+              <p><h3><a href="https://github.com/JeffLeFoll/WindowsPhone-Posemetre" target="_blank"><span class="lienGitHub">WindowsPhone-Posemètre</span></a></h3>
+                <b>WindowsPhone Posemètre</b> est une application Posemètre destiné aux photographes (permet de calculer les différents paramètres de la prise photo en fonction de la lumière reçut par le sujet). Compatible Windows Phone 8.1 et Windows 8.1 (Universal App).
+              </p>
+              <p><h3><a href="https://github.com/JeffLeFoll/KataJava-BaseGradle" target="_blank"><span class="lienGitHub">KataJava-BaseGradle</span></a></h3>
+                <b>KataJava-BaseGradle</b> est un projet squelette pour démarrer des katas TDD en Java (version Gradle).
+              </p>
+              <p><h3><a href="https://github.com/JeffLeFoll/KataJava-BaseMaven" target="_blank"><span class="lienGitHub">KataJava-BaseMaven</span></a></h3>
+                <b>KataJava-BaseMaven</b> est un projet squelette pour démarrer des katas TDD en Java (version Maven).
+              </p>
+          </section>
+
+          <section class="4u 4u(medium) 12u$(small)" id="presentations">
+              <h2>Mes présentations</h2>
+              <p><h3><a href="http://jefflefoll.github.io/presentation-tdd/" target="_blank"><span class="lienGitHub">Introduction au TDD</span></a></h3>Les slides de ma présentation sur le <b>Test Driven Development</b> qui précédent la démo de code du FizzBuzz.</p>
+          </section>
+
+          <section class="4u$ 4u$(medium) 12u$(small)" id="competences">
+            <h2>Mes compétences</h2>
+            <div class="competences">
+              <div class="row 0%">
+                <div class="-3u 3u"><span><h2>Agilité</h2></span></div>
+                <div class="-4u 6u"><span><h4>Apache Tapestry</h4></span></div>
+                <div class="-1u 3u"><span><h6>Apache Pig</h6></span></div>
+                <div class="2u$"><span><h3>Sonar</h3></span></div>
+                <div class="-2u 2u$"><span><h5>GWT</h5></span></div>
+                <div class="-3u 2u"><span><h4>Git</h4></span></div>
+                <div class="2u$"><span><h3>Java</h3></span></div>
+                <div class="-1u 3u"><span><h2>Scrum</h2></span></div>
+                <div class="-1u 2u$"><span><h3>Maven</h3></span></div>
+                <div class="-1u 2u"><span><h6>Hadoop</h6></span></div>
+                <div class="2u"><span><h2>TDD</h2></span></div>
+                <div class="1u$"><span><h4>C#</h4></span></div>
+                <div class="-3u 3u"><span><h3>JUnit</h3></span></div>
+                <div class="-4u 6u"><span><h3>Jenkins</h3></span></div>
+                <div class="-2u 6u"><span><h2>Clean Code</h2></span></div>
+              </div>
+            </div>
+          </section>
+        </div>  
+
+    </div>
+
+
+  <footer id="footer">
+    <div class="icons">
+      <a href="https://github.com/JeffLeFoll" target="_blank" class="icon fa-github-alt"><span class="label">Github</span></a>
+      <a href="https://twitter.com/JeffLeFoll" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a>
+      <a href="https://www.flickr.com/photos/jeff_lefoll/" target="_blank" class="icon fa-flickr"><span class="label">Flickr</span></a>
+      <a href="http://fr.linkedin.com/in/jefflefoll" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a>
+      <a href="http://www.viadeo.com/fr/profile/jean-francois.le-foll"><img src="http://static0.viadeo-static.com/v_img208641/profile/promotion/white/22x22.png" border="0" /></a>
+      <br>
+      <iframe src="https://ghbtns.com/github-btn.html?user=JeffLeFoll&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+      <a href="https://twitter.com/JeffLeFoll" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-dnt="true">Suivre @JeffLeFoll</a>
+    </div>
+    <div class="copyright">
+      &copy; Jean-François Le Foll 2015
+    </div>
+  </footer>
+
+    <script>
+      !function(d,s,id){
+        var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+        if(!d.getElementById(id)){
+          js=d.createElement(s);
+          js.id=id;
+          js.src=p+'://platform.twitter.com/widgets.js';
+          fjs.parentNode.insertBefore(js,fjs);
+        }
+      }
+      (document, 'script', 'twitter-wjs');
+    </script>
+  </body>
+</HTML>
