--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="7u">
         <h2>Bonjour, Je suis Jean-François Le Foll.</h2>
-        <p>Passionné par mon métier le développement logiciel, convaincu par les méthodes agiles et les pratiques de développement actuelles issues d'XP (TDD, pair programming) ; J'essaye de mettre ces idées en application dans mon travail de tous les jours ainsi que de diffuser ces bonnes pratiques. </p>
+        <p>Développeur passionné, convaincu par les méthodes agiles et les pratiques de développement actuelles issues d'XP (TDD, pair programming) ; J'essaye de mettre ces idées en application dans mon travail de tous les jours ainsi que de diffuser ces bonnes pratiques. </p>
       </div>
     </div>
   </section>
@@ -96,7 +96,7 @@
       <a href="https://twitter.com/JeffLeFoll" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a>
       <a href="https://www.flickr.com/photos/jeff_lefoll/" target="_blank" class="icon fa-flickr"><span class="label">Flickr</span></a>
       <a href="http://fr.linkedin.com/in/jefflefoll" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a>
-      <a href="http://www.viadeo.com/fr/profile/jean-francois.le-foll"><img src="http://static0.viadeo-static.com/v_img208641/profile/promotion/white/22x22.png" border="0" /></a>
+      <a href="http://www.viadeo.com/fr/profile/jean-francois.le-foll" target="_blank"><img src="http://static0.viadeo-static.com/v_img208641/profile/promotion/white/22x22.png" border="0" /></a>
       <br>
       <iframe src="https://ghbtns.com/github-btn.html?user=JeffLeFoll&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
       <a href="https://twitter.com/JeffLeFoll" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-dnt="true">Suivre @JeffLeFoll</a>
