--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Jean-François Le Foll</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="content-language" content="fr-fr">
+    <meta name="description" content="présentation personnelle et professionnelle de Jean-Fançois Le Foll, 'Jeff Le Foll'">
     <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="js/jquery.min.js"></script>
     <script src="js/skel.min.js"></script>
