--- a/index.html
+++ b/index.html
@@ -16,15 +16,6 @@
       <link rel="stylesheet" href="css/style.css" />
       <link rel="stylesheet" href="css/style-xlarge.css" />
     </noscript>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-61680351-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
 
   <body id="top">
@@ -130,5 +121,6 @@
       }
       (document, 'script', 'twitter-wjs');
     </script>
+    <script src="js/google-analytics.js"></script>
   </body>
 </HTML>
